# Vita_Snake

./: .gitignore  CMakeLists.txt  readme.md
CApp/: CApp.cpp  CApp.h
CContainer/: CContainer.cpp  CContainer.h
CSnake/: CSnake.cpp  CSnake.h
CSound/: CSound.cpp  CSound.h
CText/: CText.cpp  CText.h
Headers/: macros.h  parameters.h
Resources/: SnakeAssets.xcf
src/: main.cpp
